#2 Add telegram-bot using API

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,11 @@ token = [token]
 url = https://www.opensubtitles.com/api/v1
 user = [username]
 password = [password]
-token = [token]
 
 [yandex.translator]
 key = [key]
+
+[telebot]
+url = https://api.telegram.org/bot
+token = [token]
+
