Updating integration with addic7ed and updatating library  for working with imdb
- improvements work with telegram bot

--- a/config.ini
+++ b/config.ini
@@ -8,11 +8,20 @@ token = [token]
 url = https://www.opensubtitles.com/api/v1
 user = [username]
 password = [password]
+token = [token]
 
 [yandex.translator]
+key = [key]
+
+[google.translator]
 key = [key]
 
 [telebot]
 url = https://api.telegram.org/bot
 token = [token]
+
+[lingualeo]
+url = https://api.lingualeo.com
+user = [user]
+password = [password]
 
